catnip_grammar/grammar.js
    source_file: $ => seq(
      repeat($._newline),  // Allow leading newlines
      optional($._statements),
    ),

    // Statements - separated by semicolons or newlines
    _statements: $ => seq(
      $.statement,
      repeat(seq(repeat1($._statement_separator), $.statement)),
      repeat($._statement_separator),
    ),

    statement: $ => choice(
      $.assignment,
      $.while_stmt,
      $.for_stmt,
      $.return_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.try_stmt,
      $.with_stmt,
      $.raise_stmt,
      $.pragma_stmt,
      $.struct_stmt,
      $.trait_stmt,
      $.enum_stmt,
      $.union_stmt,
      $._expression,
    ),

    pragma_stmt: $ => seq(
      'pragma',
      '(',
      $.pragma_arg,
      repeat(seq(',', $.pragma_arg)),
      ')',
    ),

    pragma_arg: $ => choice($.string, $.true, $.false, $.integer, $.pragma_qualified),
    struct_stmt: $ => seq(
      'struct',
      field('name', $.identifier),
      optional(choice(
        seq($.struct_implements, optional($.struct_extends)),
        seq($.struct_extends, optional($.struct_implements)),
      )),
      '{',
      repeat($.struct_field),
      repeat($.struct_method),
      '}',
    ),

    struct_implements: $ => seq(
      'implements',
      '(',
      $.identifier,
      repeat(seq(',', $.identifier)),
      ')',
    ),

    struct_extends: $ => seq(
      'extends',
      '(',
      $.identifier, repeat(seq(',', $.identifier)),
      ')',
    ),

    struct_field: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expr))),
      optional(seq('=', field('default', $._expression))),
      optional(';'),
    ),

    operator_symbol: $ => choice(
      '+', '-', '*', '/', '//', '%', '**',
      '==', token('!='), '<', '<=', '>', '>=',
      '&', '|', '^', '<<', '>>',
      '~', 'in', seq('not', 'in'),
    ),

    struct_method: $ => seq(
      repeat($.decorator),
      choice(
        seq('op', field('op_symbol', $.operator_symbol)),
        field('method_name', $.identifier),
      ),
      '(',
      optional($.lambda_params),
      ')',
      optional(seq(':', field('return_type', $.type_expr))),
      // Body is optional: abstract methods have decorator(s) but no => { body }
      // Concrete methods always have => { body }
      optional(seq('=>', $.block)),
    ),

    // Trait definition
    trait_stmt: $ => seq(
      'trait',
      field('name', $.identifier),
      optional($.trait_extends),
      '{',
      repeat($.struct_field),
      repeat($.struct_method),
      '}',
    ),

    trait_extends: $ => seq(
      'extends',
      '(',
      $.identifier,
      repeat(seq(',', $.identifier)),
      ')',
    ),

    // Enum definition
    type_expr: $ => prec.left(seq(
      $.type_atom,
      repeat(seq('|', $.type_atom)),
    )),

    // An atom is a named type (`int`, `list[int]`, `Option[int]`) or a
    // function type (`(int, str) -> bool`). The arrow is right-absorbing:
    // in `(int) -> int | str` the union belongs to the return type (a
    // function type as a union member goes last: `None | (int) -> int`).
    // `->` is distinct from the lambda's `=>`: a type is a contract, not a
    // value, and the two can share a line (`cb: (int) -> int = (x) => x`).
    type_atom: $ => choice(
      seq(
        $.identifier,
        optional($.type_args),
      ),
      $.function_type,
    ),

    decorator: $ => seq('@', $.identifier),

    assignment: $ => seq(
      repeat($.decorator),  // Zero or more decorators
      $.lvalue,
      repeat(seq('=', $.lvalue)),
      '=',
      $._expression,
    ),

    return_stmt: $ => prec.right(seq('return', optional($._expression))),

    break_stmt: $ => 'break',

    continue_stmt: $ => 'continue',

    // Error handling
    match_expr: $ => seq(
      'match',
      field('value', $._expression),
      '{',
      repeat1($.match_case),
      '}',
    ),

    match_case: $ => seq(
      $.pattern,
      optional(seq('if', field('guard', $._expression))),
      '=>',
      $.block,
    ),

    pattern: $ => $.pattern_or,

    pattern_or: $ => seq(
      $._pattern_primary,
      repeat(seq('|', $._pattern_primary)),
    ),

    _pattern_primary: $ => choice(
      $.pattern_struct,
      $.pattern_enum,
      $.pattern_tuple,
      $.pattern_literal,
      $.pattern_var,
      $.pattern_wildcard,
    ),

    pattern_tuple: $ => seq('(', $.pattern_items, ')'),

    pattern_items: $ => seq(
      $._pattern_item,
      repeat(seq(',', $._pattern_item)),
      optional(','),
    ),

    _pattern_item: $ => choice(
      $.pattern_struct,
      $.pattern_enum,
      $.pattern_tuple,
      $.pattern_star,
      $.pattern_literal,
      $.pattern_var,
      $.pattern_wildcard,
    ),

    pattern_literal: $ => $.literal,
    pattern_var: $ => $.identifier,
    pattern_wildcard: $ => '_',
    block: $ => seq(
      '{',
      repeat($._newline),
      optional($._statements),
      '}',
    ),

    // Expressions
    _expression: $ => $._null_coal,

    _null_coal: $ => choice($.null_coalesce, $._bool_or),
    null_coalesce: $ => prec.left(PREC.NULLCOAL, seq($._null_coal, '??', $._bool_or)),

    _bool_or: $ => choice($.bool_or, $._bool_and),
    bool_or: $ => prec.left(PREC.OR, seq($._bool_or, 'or', $._bool_and)),

    _bool_and: $ => choice($.bool_and, $._bool_not),
    comparison: $ => prec.left(PREC.COMPARE,
      seq($._bit_or, repeat1(seq($.comp_op, $._bit_or)))
    ),
    comp_op: $ => choice('<=', '<', '>=', '>', token('!='), '==', 'in', seq('not', 'in'), 'is', seq('is', 'not')),

    _bit_or: $ => choice($.bit_or, $._bit_xor),
    _additive: $ => choice($.additive, $._multiplicative),
    additive: $ => prec.left(PREC.ADD, seq($._additive, $.add_sub_op, $._multiplicative)),
    add_sub_op: $ => choice('+', '-'),

    _multiplicative: $ => choice($.multiplicative, $._unary),
    multiplicative: $ => prec.left(PREC.MUL, seq($._multiplicative, $.mul_div_op, $._unary)),
    mul_div_op: $ => choice('*', '/', '//', '%'),

    _unary: $ => choice($.unary, $._exponent),
    _primary: $ => choice(
      $.lambda_expr,
      $.nd_recursion,
      $.nd_map,
      $.chained,
      $.bracket_list,
      $.bracket_dict,
      $.list_literal,
      $.tuple_literal,
      $.set_literal,
      $.dict_literal,
      $.call,
      $._atom,
    ),

    // ND-recursion: ~~(seed, lambda) or ~~ lambda
    nd_recursion: $ => choice(
      prec(2, seq('~~', $.arguments)),    // ~~(seed, lambda) - combinator call (prioritaire)
      prec(1, seq('~~', $.lambda_expr)),  // ~~ lambda - declaration form
    ),

    // ND-map: ~>(data, f) or ~> f
    nd_map: $ => choice(
      prec(2, seq('~>', $.arguments)),  // ~>(data, f) - applicative form (prioritaire)
      prec(1, seq('~>', $._primary)),   // ~> f - lift form
    ),

    chained: $ => prec.left(PREC.MEMBER, seq(
      choice(
        $.bracket_list,
        $.bracket_dict,
        $.list_literal,
        $.tuple_literal,
        $.set_literal,
        $.dict_literal,
        $.call,
        $._atom,
        $.literal,
      ),
      repeat1($._member),
    )),

    call: $ => prec(PREC.CALL, seq($._atom, $.arguments)),

    _member: $ => choice(
      $.getattr,
      $.callattr,
      $.call_member,
      $.broadcast,
      $.index,
      $.fullslice,
    ),

    broadcast: $ => prec.dynamic(-1, seq('.[', $.broadcast_op, ']')),
    broadcast_op: $ => choice(
      $.broadcast_if,
      $.broadcast_nd_recursion,
      $.broadcast_binary,
      $.broadcast_unary,
      $.broadcast,
      $._expression,
    ),

    // data.[~~ lambda] - broadcast ND-recursion (higher prec than nd_recursion)
    broadcast_nd_recursion: $ => prec(3, seq('~~', choice($.lambda_expr, $._expression))),

    arguments: $ => seq('(', optional($._params), ')'),

    _params: $ => choice($.args_kwargs, $.args, $.kwargs),

    args: $ => seq(
      $._expression,
      repeat(seq(',', $._expression)),
      optional(','),
    ),

    kwargs: $ => seq(
      $.kwarg,
      repeat(seq(',', $.kwarg)),
      optional(','),
    ),

    kwarg: $ => seq(field('key', $.identifier), '=', field('value', $._expression)),

    _atom: $ => choice(
      $.identifier,
      $.group,
      $.block,
      $.match_expr,
      $.if_expr,
    ),

    lambda_expr: $ => seq(
      '(',
      optional($.lambda_params),
      ')',
      optional(seq(':', field('return_type', $.type_expr))),
      '=>',
      $.block,
    ),

    lambda_params: $ => choice(
      seq(
        $.lambda_param,
        repeat(seq(',', $.lambda_param)),
        ',',
        $.variadic_param,
      ),
      seq(
        $.lambda_param,
        repeat(seq(',', $.lambda_param)),
      ),
      $.variadic_param,
    ),

    lambda_param: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expr))),
      optional(seq('=', field('default', $._expression))),
    ),

    variadic_param: $ => seq('*', field('name', $.identifier)),

    unpack_target: $ => choice(
      $.unpack_tuple,
      $.unpack_sequence,
      $.identifier,
    ),

    unpack_sequence: $ => seq(
      $._unpack_item,
      ',',
      $._unpack_item,
      repeat(seq(',', $._unpack_item)),
      optional(','),
    ),

    _unpack_item: $ => choice(
      $.unpack_tuple,
      $.variadic_param,
      $.identifier,
    ),

    lvalue: $ => choice($.setattr, $.unpack_target),

    literal: $ => choice(
      $.none,
      $.true,
      $.false,
      $.nd_empty_topos,
      $.string,
      $.fstring,
      $.bstring,
      $.number,
    ),

    nd_empty_topos: $ => '~[]',

    none: $ => token(prec(PREC.KEYWORD, 'None')),
    true: $ => token(prec(PREC.KEYWORD, 'True')),
    false: $ => token(prec(PREC.KEYWORD, 'False')),

    number: $ => choice($.imaginary, $.decimal, $.float, $.integer),

    float: $ => token(choice(
      /\d+\.\d+([eE][+-]?\d+)?/,
      /\.\d+([eE][+-]?\d+)?/,
      /\d+[eE][+-]?\d+/,
    )),

    integer: $ => token(choice(
      /0[xX][0-9a-fA-F]+/,
      /0[bB][01]+/,
      /0[oO][0-7]+/,
      /\d+/,
    )),

    string: $ => choice(
      $._double_string,
      $._single_string,
      $._long_double_string,
      $._long_single_string,
    ),

    // Simple strings as tokens to prevent extras (comments) from being inserted mid-string
    _double_string: $ => token(seq('"', repeat(choice(/\\['"\\nrtbfv0]|\\x[0-9a-fA-F]{2}|\\u[0-9a-fA-F]{4}|\\U[0-9a-fA-F]{8}/, /[^"\\]+/)), '"')),
    _single_string: $ => token(seq("'", repeat(choice(/\\['"\\nrtbfv0]|\\x[0-9a-fA-F]{2}|\\u[0-9a-fA-F]{4}|\\U[0-9a-fA-F]{8}/, /[^'\\]+/)), "'")),
    // Long strings - handled as single tokens to avoid lookahead
    _long_double_string: $ => token(seq('"""', /([^"\\]|\\.|"[^"]|""[^"])*/, '"""')),
    _long_single_string: $ => token(seq("'''", /([^'\\]|\\.|'[^']|''[^'])*/, "'''")),

    fstring: $ => choice(
      $._fstring_double,
      $._fstring_single,
      $._long_fstring_double,
      $._long_fstring_single,
    ),

    _fstring_double: $ => seq(/[fF]"/, repeat(choice($.escape_sequence, $.interpolation, $.fstring_text_double)), '"'),
    _fstring_single: $ => seq(/[fF]'/, repeat(choice($.escape_sequence, $.interpolation, $.fstring_text_single)), "'"),
    // Long f-strings with interpolation support
    _long_fstring_double: $ => seq(
      /[fF]"""/,
      repeat(choice(
        $.escape_sequence,
        $.interpolation,
        $.fstring_text_long_double,
      )),
      '"""'
    ),
    _long_fstring_single: $ => seq(
      /[fF]'''/,
      repeat(choice(
        $.escape_sequence,
        $.interpolation,
        $.fstring_text_long_single,
      )),
      "'''"
    ),

    // F-string literal text nodes (named so they appear in AST)
    // Use choice to handle ! separately to avoid conflict with != operator
    fstring_text_double: $ => token(prec(100, choice(
      /[^"\\{!]+/,       // Regular text without !
      /!/,               // Single ! character
    ))),
    interpolation: $ => seq(
      '{',
      $._expression,
      optional($.fstring_debug),
      optional(seq('!', $.fstring_conversion)),
      optional(seq(':', $.format_spec)),
      '}'
    ),

    // Debug flag: f"{x=}" shows "x=42"
    identifier: $ => /[a-zA-Z_]\w*/,
