catnip_grammar/test/corpus/literals.txt
================================================================================
Integer literals
================================================================================

42
0xff
0b1010
0o755

--------------------------------------------------------------------------------

(source_file
  (statement
    (literal
      (number
        (integer))))
  (statement
    (literal
      (number
        (integer))))
  (statement
    (literal
      (number
        (integer))))
  (statement
    (literal
      (number
        (integer)))))

================================================================================
Float literals
================================================================================

3.14
0.5
1e10
2.5e-3

--------------------------------------------------------------------------------

(source_file
  (statement
    (literal
      (number
        (float))))
  (statement
    (literal
      (number
        (float))))
  (statement
    (literal
      (number
        (float))))
  (statement
    (literal
      (number
        (float)))))

================================================================================
Boolean literals
================================================================================

True
False

--------------------------------------------------------------------------------

(source_file
  (statement
    (literal
      (true)))
  (statement
    (literal
      (false))))

================================================================================
None literal
================================================================================

None

--------------------------------------------------------------------------------

(source_file
  (statement
    (literal
      (none))))

================================================================================
String literals
================================================================================

"hello"
'world'
"escaped \"quote\""

--------------------------------------------------------------------------------

(source_file
  (statement
    (literal
      (string)))
  (statement
    (literal
      (string)))
  (statement
    (literal
      (string))))

================================================================================
F-string
================================================================================

f"hello {name}"

--------------------------------------------------------------------------------

(source_file
  (statement
    (literal
      (fstring
        (fstring_text_double)
        (interpolation
          (identifier))))))
