catnip_grammar/test/corpus/null_coalesce.txt
================================================================================
Null-coalescing operator
================================================================================

x ?? 42

--------------------------------------------------------------------------------

(source_file
  (statement
    (null_coalesce
      (identifier)
      (literal
        (number
          (integer))))))

================================================================================
Null-coalescing chained (left-associative)
================================================================================

a ?? b ?? c

--------------------------------------------------------------------------------

(source_file
  (statement
    (null_coalesce
      (null_coalesce
        (identifier)
        (identifier))
      (identifier))))

================================================================================
Null-coalescing lower precedence than or
================================================================================

x = a ?? b or c

--------------------------------------------------------------------------------

(source_file
  (statement
    (assignment
      (lvalue
        (unpack_target
          (identifier)))
      (null_coalesce
        (identifier)
        (bool_or
          (identifier)
          (identifier))))))
