catnip_grammar/test/corpus/pattern_matching.txt
================================================================================
Match with literal pattern
================================================================================

match x {
  1 => { "one" }
  2 => { "two" }
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (match_expr
      value: (identifier)
      (match_case
        (pattern
          (pattern_or
            (pattern_literal
              (literal
                (number
                  (integer))))))
        (block
          (statement
            (literal
              (string)))))
      (match_case
        (pattern
          (pattern_or
            (pattern_literal
              (literal
                (number
                  (integer))))))
        (block
          (statement
            (literal
              (string))))))))

================================================================================
Match with variable pattern
================================================================================

match x {
  n => { n + 1 }
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (match_expr
      value: (identifier)
      (match_case
        (pattern
          (pattern_or
            (pattern_var
              (identifier))))
        (block
          (statement
            (additive
              (identifier)
              (add_sub_op)
              (literal
                (number
                  (integer))))))))))

================================================================================
Match with wildcard pattern
================================================================================

match x {
  _ => { "default" }
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (match_expr
      value: (identifier)
      (match_case
        (pattern
          (pattern_or
            (pattern_wildcard)))
        (block
          (statement
            (literal
              (string))))))))

================================================================================
Match with OR pattern
================================================================================

match x {
  1 | 2 | 3 => { "small" }
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (match_expr
      value: (identifier)
      (match_case
        (pattern
          (pattern_or
            (pattern_literal
              (literal
                (number
                  (integer))))
            (pattern_literal
              (literal
                (number
                  (integer))))
            (pattern_literal
              (literal
                (number
                  (integer))))))
        (block
          (statement
            (literal
              (string))))))))

================================================================================
Match with guard
================================================================================

match x {
  n if n > 0 => { "positive" }
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (match_expr
      value: (identifier)
      (match_case
        (pattern
          (pattern_or
            (pattern_var
              (identifier))))
        guard: (comparison
          (identifier)
          (comp_op)
          (literal
            (number
              (integer))))
        (block
          (statement
            (literal
              (string))))))))

================================================================================
Match with tuple pattern
================================================================================

match point {
  (0, 0) => { "origin" }
  (x, y) => { x + y }
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (match_expr
      value: (identifier)
      (match_case
        (pattern
          (pattern_or
            (pattern_tuple
              (pattern_items
                (pattern_literal
                  (literal
                    (number
                      (integer))))
                (pattern_literal
                  (literal
                    (number
                      (integer))))))))
        (block
          (statement
            (literal
              (string)))))
      (match_case
        (pattern
          (pattern_or
            (pattern_tuple
              (pattern_items
                (pattern_var
                  (identifier))
                (pattern_var
                  (identifier))))))
        (block
          (statement
            (additive
              (identifier)
              (add_sub_op)
              (identifier))))))))
