catnip_grammar/test/corpus/statements.txt
================================================================================
Simple assignment
================================================================================

x = 42

--------------------------------------------------------------------------------

(source_file
  (statement
    (assignment
      (lvalue
        (unpack_target
          (identifier)))
      (literal
        (number
          (integer))))))

================================================================================
Chained assignment
================================================================================

a = b = c = 1

--------------------------------------------------------------------------------

(source_file
  (statement
    (assignment
      (lvalue
        (unpack_target
          (identifier)))
      (lvalue
        (unpack_target
          (identifier)))
      (lvalue
        (unpack_target
          (identifier)))
      (literal
        (number
          (integer))))))

================================================================================
Tuple unpacking assignment
================================================================================

a, b = pair

--------------------------------------------------------------------------------

(source_file
  (statement
    (assignment
      (lvalue
        (unpack_target
          (unpack_sequence
            (identifier)
            (identifier))))
      (identifier))))

================================================================================
Return statement
================================================================================

return 42
return

--------------------------------------------------------------------------------

(source_file
  (statement
    (return_stmt
      (literal
        (number
          (integer)))))
  (statement
    (return_stmt)))

================================================================================
Break and continue
================================================================================

break
continue

--------------------------------------------------------------------------------

(source_file
  (statement
    (break_stmt))
  (statement
    (continue_stmt)))

================================================================================
Pragma statement
================================================================================

pragma("tco", True)

--------------------------------------------------------------------------------

(source_file
  (statement
    (pragma_stmt
      (pragma_arg
        (string))
      (pragma_arg
        (true)))))

================================================================================
Struct with default field values
================================================================================

struct Point { x; y = 0; }

--------------------------------------------------------------------------------

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_field
        name: (identifier))
      (struct_field
        name: (identifier)
        default: (literal
          (number
            (integer)))))))

================================================================================
Struct extends
================================================================================

struct Point3 extends(Point) { z; }

--------------------------------------------------------------------------------

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_extends
        (identifier))
      (struct_field
        name: (identifier)))))
