catnip_grammar/test/corpus/traits.txt
==================
Simple trait
==================

trait Drawable {
    x;
    y;
    draw(self) => { print("draw") }
}

---

(source_file
  (statement
    (trait_stmt
      name: (identifier)
      (struct_field
        name: (identifier))
      (struct_field
        name: (identifier))
      (struct_method
        method_name: (identifier)
        (lambda_params
          (lambda_param
            name: (identifier)))
        (block
          (statement
            (call
              (identifier)
              (arguments
                (args
                  (literal
                    (string)))))))))))

==================
Trait with extends
==================

trait Extended extends(Base, Other) {
    value(self) => { 42 }
}

---

(source_file
  (statement
    (trait_stmt
      name: (identifier)
      (trait_extends
        (identifier)
        (identifier))
      (struct_method
        method_name: (identifier)
        (lambda_params
          (lambda_param
            name: (identifier)))
        (block
          (statement
            (literal
              (number
                (integer)))))))))

==================
Struct with implements
==================

struct Point implements(Drawable, Clickable) {
    z;
}

---

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_implements
        (identifier)
        (identifier))
      (struct_field
        name: (identifier)))))

==================
Struct with implements and extends
==================

struct Button implements(Interactive) extends(Widget) {
    label;
}

---

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_implements
        (identifier))
      (struct_extends
        (identifier))
      (struct_field
        name: (identifier)))))

==================
Struct with extends and implements (reverse order)
==================

struct Panel extends(Widget) implements(Drawable) {
    color;
}

---

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_extends
        (identifier))
      (struct_implements
        (identifier))
      (struct_field
        name: (identifier)))))

==================
Struct with operator overload (binary)
==================

struct Vec2 {
    x;
    y;
    op +(self, rhs) => { 42 }
}

---

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_field
        name: (identifier))
      (struct_field
        name: (identifier))
      (struct_method
        op_symbol: (operator_symbol)
        (lambda_params
          (lambda_param
            name: (identifier))
          (lambda_param
            name: (identifier)))
        (block
          (statement
            (literal
              (number
                (integer)))))))))

==================
Struct with unary operator
==================

struct Vec2 {
    x;
    op -(self) => { 42 }
}

---

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_field
        name: (identifier))
      (struct_method
        op_symbol: (operator_symbol)
        (lambda_params
          (lambda_param
            name: (identifier)))
        (block
          (statement
            (literal
              (number
                (integer)))))))))

==================
Struct with multi-char operator
==================

struct Vec2 {
    x;
    op //(self, rhs) => { 42 }
}

---

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_field
        name: (identifier))
      (struct_method
        op_symbol: (operator_symbol)
        (lambda_params
          (lambda_param
            name: (identifier))
          (lambda_param
            name: (identifier)))
        (block
          (statement
            (literal
              (number
                (integer)))))))))

==================
Struct with comparison operator
==================

struct Vec2 {
    x;
    op ==(self, rhs) => { 42 }
}

---

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_field
        name: (identifier))
      (struct_method
        op_symbol: (operator_symbol)
        (lambda_params
          (lambda_param
            name: (identifier))
          (lambda_param
            name: (identifier)))
        (block
          (statement
            (literal
              (number
                (integer)))))))))

==================
Struct with membership operator (not in)
==================

struct Bag {
    items;
    op not in(self, item) => { True }
}

---

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_field
        name: (identifier))
      (struct_method
        op_symbol: (operator_symbol)
        (lambda_params
          (lambda_param
            name: (identifier))
          (lambda_param
            name: (identifier)))
        (block
          (statement
            (literal
              (true))))))))

==================
Abstract operator in struct
==================

struct Base {
    x;
    @abstract op +(self, rhs)
}

---

(source_file
  (statement
    (struct_stmt
      name: (identifier)
      (struct_field
        name: (identifier))
      (struct_method
        (decorator
          (identifier))
        op_symbol: (operator_symbol)
        (lambda_params
          (lambda_param
            name: (identifier))
          (lambda_param
            name: (identifier)))))))

==================
Operator in trait
==================

trait Addable {
    op +(self, rhs) => { 42 }
}

---

(source_file
  (statement
    (trait_stmt
      name: (identifier)
      (struct_method
        op_symbol: (operator_symbol)
        (lambda_params
          (lambda_param
            name: (identifier))
          (lambda_param
            name: (identifier)))
        (block
          (statement
            (literal
              (number
                (integer)))))))))
